<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LeaderboardFragment"
    tools:context=".LeaderboardFragment">

    <LinearLayout
        android:id="@+id/LeaderboardLL1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/LeaderboardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
        <LinearLayout
            android:id="@+id/LeaderboardLL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LeaderboardText2"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="Rank"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/LeaderboardText3"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="UserName"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/LeaderboardText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/LeaderboardRank1LL"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="1."
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                >
            </TextView>

            <TextView
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:id="@+id/Rank1Username"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18dp"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Rank1Score"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/LeaderboardRank2LL"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="2."
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                >
            </TextView>
            <TextView
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:id="@+id/Rank2Username"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18dp"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Rank2Score"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/LeaderboardRank3LL"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="3."
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                >
            </TextView>
            <TextView
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:id="@+id/Rank3Username"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18dp"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Rank3Score"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>