...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:menu="@menu/utility_bar" />

...
